# medical_nla

./: .gitignore  NOTES.md  README.md  pyproject.toml  score_reconstruction_mse.py
configs/: default.yaml
data/: prompts_general.jsonl  prompts_medical.jsonl  prompts_medical_distractor_order_variants_v1.jsonl  prompts_medical_distractor_pairs_v1.jsonl  prompts_medical_distractor_variants_v1.jsonl  prompts_medical_entities.jsonl  prompts_medical_nondiagnostic_entities.jsonl  prompts_medical_specificity_cases_v1.jsonl  prompts_medical_specificity_cases_v2.jsonl  prompts_medical_specificity_variants_v1.jsonl  prompts_medical_specificity_variants_v2.jsonl
prompts/: medical_actor_prompt_suffix.txt  medical_actor_prompt_template.txt
scripts/: __init__.py  compare_distractor_activation_vectors.py  compare_specificity_activation_vectors.py  inspect_ddxplus_schema.py  make_ddxplus_probe_dataset.py  make_distractor_position_variants.py  make_entity_position_variants.py  make_specificity_position_variants.py  run_source_model_answers.py  score_specificity_outputs.py  train_ddxplus_linear_probe.py
src/: __init__.py  config.py  extract_activations.py  injection.py  jsonl.py  modeling.py  nla.py  reconstruction_scoring.py  report.py  run_nla.py
tests/: test_ddxplus_probe_dataset.py  test_extract_positions.py  test_injection.py  test_reconstruction_scoring.py  test_specificity_variants.py
